[project]
name = "priority"
version = "0.1.0"
description = "Priority sampling"
readme = "README.md"
authors = [
    { name = "Jacob Hoover Vigly", email = "jacvigly@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
]
viz = [
    "nbformat>=5.10.4",
    "plotly>=6.0.0",
]
