[project]
name = "perturb_sort"
version = "0.1.0"
description = "Perturb-sort sampling"
readme = "README.md"
authors = [
    { name = "Jacob Hoover Vigly", email = "jacvigly@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "plotly>=6.0.0",
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
]
